@@ -1,4 +1,4 @@
-$Id: History,v 1.11 2002-05-24 09:14:04 dressel Exp $
+$Id: History,v 1.12 2002-05-31 11:47:37 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 31th, 2002 M.Dressel - exbiasing-V04-00-06
+- change ...Manager to ...Sampler to be conform to transport-V04-00-06
 
 May 23th, 2002 M.Dressel - internal-1-exbiasing-V04-00-05
 - Update of README and ouput files after changes in G4ProcessPlacer in 
